# idea-portal

./: .env.example  .gitignore  CLAUDE.md  ERD_REFERENCE.md  IDEA_Development_Roadmap.md  IDEA_Negative_Cases.docx  IDEA_Task_Management.xlsx  IDEA_User_Stories.docx  MIGRATION_GUIDE.md  README.md  SMOKE_TEST_GUIDE.md  TSK-001_SMOKE_GUIDE.md  boot_local.sh  diagnose_db.sh  docker-compose.yml  knowledge.md  start.sh  stop_local.sh  tsk022b_apply.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2d1a9cd17920_add_hiring_tables.py  31463f8d1246_add_onboarding_tables.py  475b24979216_add_employee_separations.py  8d413be024e0_initial_schema_47_tables.py  a4d7e9f1c628_tsk040_welcome_seen.py  a7c2f5e8b401_tsk022c_move_invoice_to_finance.py  a8c5d2f4e617_tsk047_monthly_attendance.py  b3e9d2c1f502_tsk022b_pm_hierarchy_phase_epic_subtask.py  b8c1e4f7d539_tsk044_045_probation_cms.py  b9d6e3f5a728_tsk050_payroll_approval_workflow.py  c1e8a4b2f839_tsk055_056_period_config_uniq.py  c4869330d466_add_leave_balances_and_request_audit_.py  c8f4a3e5d702_tsk070_change_request.py  d5a8c1f3e904_tsk107_placement_amendment.py  d6f9c2e8b94a_tsk053_054_thr_final_payroll.py  e3a7b9d2c54f_tsk059_061_notif_dedupe_delivery.py  e9b6f2d4a015_tsk108_client_kpi.py  eab2758c6137_extend_reimbursement_procurement_audit_.py  f4a7c9b1d316_tsk057_notifications.py  f5b8c3a7e21d_tsk034_offer_letter_workflow.py
backend/app/: __init__.py  config.py  database.py  main.py  seed.py
backend/app/assessment/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/core/: audit.py  deps.py  redis_client.py  security.py  storage.py
backend/app/dashboard/: __init__.py  router.py
backend/app/finance/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/hiring/: __init__.py  models.py  offer_pdf_generator.py  (+5 more)
backend/tests/: conftest.py  test_account_lock.py  test_auth.py  test_employees.py  test_health.py  test_jwt.py  test_password_reset.py  test_permission_matrix.py  test_rbac.py  test_search.py  test_session.py
(+225 files in other folders)
